--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -2,10 +2,10 @@
   <template>
     <div class='container' style=" background-color: {{color}}" >
 
-      <div  on-tap="{{toggleCollapsed}}" class='content'>
+      <div on-tap="{{toggleCollapsed}}" class='content'>
         <template if="{{collapsed}}">
           <p layout horizontal>
-            <span> {{annotation.body | truncate}}</span>
+            <span class=text>{{annotation.body}}</span>
             <span flex></span>
             <span>{{annotation.responses.length}} replies</span>
           </p>
@@ -27,7 +27,7 @@
           <textarea class='niceTextArea'  value="{{text}}" placeholder="Add a reply..."> </textarea>
           <div layout horizontal end-justified class='controls'>
             <paper-icon-button on-click={{submitComment}}  icon="add"></paper-icon-button>
-            <paper-icon-button on-click={{dismissNewCommnet}} icon="close"></paper-icon-button>
+            <paper-icon-button on-click={{dismissNewComment}} icon="close"></paper-icon-button>
           </div>
         </template>
 
@@ -62,6 +62,15 @@
       .content{
         width: 100%;
         height: 100%;
+        cursor: pointer;
+      }
+      .content .text {
+        display: inline-block;
+        font-weight: bold;
+        width: 300px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       textarea{
         width: 100%;
@@ -75,7 +84,7 @@
       .comment{
         background-color: #1976D2;
         box-sizing:border-box;
-        padding: 10px 0px 10px 10px;
+        padding: 10px 0 10px 10px;
       }
 
     </style>
@@ -85,17 +94,14 @@
     Polymer({
       newCommentVisible: false,
       collapsed: true,
-      dismissNewCommnet:function(){
+      dismissNewComment:function(){
         this.newCommentVisible = false
-      },
-      truncate:function(text){
-        return this.collapsed ? text.slice(0,50) + "..." : text
       },
       showNewComment:function(){
         this.newCommentVisible = true
       },
       submitComment:function(){
-        this.$.saveRequest.body = this.responseParams()
+        this.$.saveRequest.body = this.responseParams();
         this.$.saveRequest.go()
       },
       saveUrl:function(paper_sha){
@@ -105,8 +111,8 @@
         this.collapsed = !this.collapsed
       },
       saved:function(e){
-        this.fire("notification", "Reply saved")
-        this.annotation.responses.push(e.detail.response)
+        this.fire("notification", "Reply saved");
+        this.annotation.responses.push(e.detail.response);
         this.newCommentVisible = false
       },
       responseParams:function(){
@@ -116,7 +122,7 @@
             page: this.annotation.page,
             parent_id: this.annotation.id
           }
-        }
+        };
 
         return JSON.stringify(params)
       },
