Hide reply button when reply text is visisbe. Fixes #129

--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -36,10 +36,14 @@
           </div>
         </template>
 
-        <div layout horizontal>
-          <span flex></span>
-          <core-icon on-click= {{showNewComment}} icon='reply'></core-icon>
-        </div>
+
+        <template if={{!newCommentVisible}}>
+          <div layout horizontal>
+            <span flex></span>
+            <core-icon on-click= {{showNewComment}} icon='reply'></core-icon>
+          </div>
+        </template>
+
       </template>
     </div>
 
