--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -5,25 +5,8 @@
  * Any html files within this directory, lib/assets/components, or vendor/assets/components
  * can be referenced here using a relative path.
  *
- *= require polymer/polymer
- *= require core-ajax/core-ajax
- *= require core-scaffold/core-scaffold
- *= require core-toolbar/core-toolbar
- *= require core-item/core-item
- *= require core-icon/core-icon
- *= require core-list/core-list
- *= require core-menu/core-menu
- *= require paper-toast/paper-toast
- *= require paper-icon-button/paper-icon-button
- *= require paper-shadow/paper-shadow
- *= require paper-spinner/paper-spinner
- *= require paper-button/paper-button
- *= require paper-input/paper-input
- *= require paper-button/paper-button
- *= require paper-progress/paper-progress
- *= require paper-dialog/paper-action-dialog
- *= require app-router/app-router
- *= require ajax-form/ajax-form
+ *= require polymer-components
+ *= require third-party-components
 
  *= require oj-global-expressions
 
