--- a/app/assets/components/ui-elements/oj-new-annotation.html
+++ b/app/assets/components/ui-elements/oj-new-annotation.html
@@ -1,7 +1,7 @@
 <polymer-element name="oj-new-annotation" attributes='location paper'>
 <template>
   <div layout vertical center-center>
-    <textarea class='niceTextArea' value="{{text}}" placeholder="Add an issue..."> </textarea>
+    <markdown-text-area placeholder="Add an issue" value="{{text}}"></markdown-text-area>
 
     <div layout horizontal end-justified class='controls'>
       <paper-icon-button on-click={{submit}}  icon="add"></paper-icon-button>
@@ -22,20 +22,16 @@
       padding: 20px;
       min-height:100px;
       position:absolute;
-      box-sizing:border-box;
+      box-sizing: border-box;
       width:100%;
       left:0;
     }
-    textarea{
-      resize: none;
-      height: 100%;
-      min-height:130px;
+
+    markdown-text-area{
       width: 100%;
-      padding: 8px;
-      border: 1px solid #cccccc;
-      line-height: 130%;
-      font-size: 13px;
+      height: 70%;
     }
+
     paper-autogrow-textarea{
 
     }
