Reverse out the last change and use core-collapse to get collapsing to work neatly

--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -6,6 +6,7 @@
  *= require core-ajax/core-ajax
  *= require core-scaffold/core-scaffold
  *= require core-toolbar/core-toolbar
+ *= require core-collapse/core-collapse
  *= require core-item/core-item
  *= require core-icon/core-icon
  *= require core-list/core-list
