--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag "application" %>
 
     <script charset="utf-8" src='/pdf.js'></script>
-    <script charset="utf-8" src="https://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
+    <script charset="utf-8" src="http://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
     <%= csrf_meta_tags %>
   </head>
 <body unresolved fullbleed>
